--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purple"
-    tools:context="Fragment.selectionFragment">
+    tools:context=".MainActivity">
 
 
     <Button
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:text="소리 변별"
         android:textColor="@color/black"
-        android:fontFamily="@font/gmedium"
+        //android:fontFamily="@font/gmedium"
         android:textSize="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.578"
@@ -35,7 +35,7 @@
         android:gravity="center"
         android:text="말하기 연습"
         android:textColor="@color/black"
-        android:fontFamily="@font/gmedium"
+        //android:fontFamily="@font/gmedium"
         android:textSize="44dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
