--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -31,9 +31,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.687" />
 
-    <ImageView
-
-        android:id="@+id/imageView4"
+    <Button
+        android:id="@+id/btn_mike"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/soundcircle"
