--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -79,15 +79,17 @@
         android:id="@+id/voice_text"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="192dp"
-        android:fontFamily="@font/gbold"
+        android:layout_marginBottom="172dp"
+        android:fontFamily="@font/gmedium"
         android:inputType="textMultiLine"
-        android:textSize="30dp"
         android:textColor="@color/black"
+        android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.861" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
