--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -51,8 +51,9 @@
         android:layout_width="300dp"
         android:inputType="textMultiLine"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/gbold"
+        android:fontFamily="@font/gmedium"
         android:hint="텍스트를 입력하세요."
+        android:textColor="@color/brown"
         android:scrollHorizontally="false"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,16 +80,17 @@
         android:id="@+id/voice_text"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
         android:layout_marginBottom="172dp"
         android:fontFamily="@font/gmedium"
         android:inputType="textMultiLine"
-        android:textColor="@color/black"
-        android:textSize="22dp"
+        android:textColor="@color/brown"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.861" />
 
 
