--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -31,11 +31,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.687" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_mike"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:text="Mike"
+        android:background="@drawable/soundcircle"
         android:textColor="@color/black"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,12 +62,12 @@
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.125" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:textColor="@color/black"
+        android:background="@drawable/speakercircle"
         android:id="@+id/btn_speech"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:text="Speaker"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
