--- a/app/src/main/res/layout/activity_discrimination.xml
+++ b/app/src/main/res/layout/activity_discrimination.xml
@@ -13,7 +13,7 @@
         android:layout_height="155dp"
         android:layout_marginTop="200dp"
         android:layout_weight="1"
-        android:background="@drawable/saypractice_btn"
+        android:background="@drawable/white_btn"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
         android:text="음소"
@@ -29,7 +29,7 @@
         android:layout_height="145dp"
         android:layout_marginBottom="196dp"
         android:layout_weight="1"
-        android:background="@drawable/saypractice_btn"
+        android:background="@drawable/white_btn"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
         android:text="단어"
