--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,33 +9,32 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/first"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="204dp"
+        android:layout_width="302dp"
+        android:layout_height="158dp"
+        android:layout_marginTop="184dp"
         android:layout_weight="1"
-        android:background="@drawable/saypractice_btn"
+        android:background="@drawable/green_btn"
+        android:fontFamily="@font/gbold"
         android:gravity="center"
         android:text="소리 변별"
         android:textColor="@color/black"
-        android:fontFamily="@font/gmedium"
         android:textSize="44dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintHorizontal_bias="0.577"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.219" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="302dp"
+        android:layout_height="158dp"
         android:layout_marginBottom="204dp"
         android:layout_weight="1"
-        android:background="@drawable/saypractice_btn"
+        android:background="@drawable/green_btn"
+        android:fontFamily="@font/gbold"
         android:gravity="center"
         android:text="말하기 연습"
         android:textColor="@color/black"
-        android:fontFamily="@font/gmedium"
         android:textSize="44dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
