--- a/app/src/main/res/layout/activity_phoneme.xml
+++ b/app/src/main/res/layout/activity_phoneme.xml
@@ -8,6 +8,7 @@
 
 
     <TextView
+        android:id="@+id/textview"
         android:layout_width="350dp"
         android:layout_height="190dp"
         android:layout_marginTop="48dp"
@@ -21,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
-/.
+    /.
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_ga"
@@ -56,7 +57,8 @@
         app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-/.
+    /.
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_phoneme"
         android:layout_width="158dp"
@@ -109,6 +111,18 @@
         app:layout_constraintHorizontal_bias="0.873"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/correct"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="205dp"
+        android:background="@drawable/correct"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
