--- a/app/src/main/res/layout/activity_secondph.xml
+++ b/app/src/main/res/layout/activity_secondph.xml
@@ -1,24 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purple"
-    android:animateLayoutChanges="true"
-    tools:context=".MainActivity">
+    tools:context=".SecondphActivity">
 
     <ImageView
-    android:id="@+id/correct"
-    android:duration="10"
-    android:layout_width="95dp"
-    android:layout_height="95dp"
-    android:layout_marginTop="276dp"
-    android:src="@drawable/correct"
-    android:visibility="invisible"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.098"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/correct"
+        android:duration="10"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="276dp"
+        android:src="@drawable/correct"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/wrong"
@@ -136,8 +136,5 @@
         app:layout_constraintHorizontal_bias="0.873"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
