--- a/app/src/main/res/layout/activity_fourthph.xml
+++ b/app/src/main/res/layout/activity_fourthph.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/purple"
     android:layout_height="match_parent"
-    tools:context=".forthphActvity">
+    tools:context=".FourthphActivity">
 
     <ImageView
         android:id="@+id/correct"
