--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -8,43 +8,42 @@
 
     <ImageView
 
-        android:id="@+id/imageView"
-        android:layout_width="365dp"
-        android:layout_height="235dp"
-        android:src="@drawable/malpung"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.213" />
-
-    <ImageView
-
         android:id="@+id/imageView2"
         android:layout_width="365dp"
         android:layout_height="235dp"
-        android:src="@drawable/malpung"
+        android:src="@drawable/malpungsquare"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.687" />
+        app:layout_constraintVertical_bias="0.606" />
+
+
+    <ImageView
+
+        android:id="@+id/imageView"
+        android:layout_width="365dp"
+        android:layout_height="235dp"
+        android:src="@drawable/malpungsquare"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.165" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_mike"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/soundcircle"
         android:textColor="@color/black"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.427"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.912" />
-
+        app:layout_constraintVertical_bias="0.854" />
 
     <EditText
         android:id="@+id/edit_readText"
@@ -63,18 +62,18 @@
         app:layout_constraintVertical_bias="0.125" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:textColor="@color/black"
-        android:background="@drawable/speakercircle"
         android:id="@+id/btn_speech"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:background="@drawable/speakercircle"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.912" />
+        app:layout_constraintVertical_bias="0.854" />
 
     <TextView
         android:id="@+id/voice_text"
