--- a/app/src/main/res/layout/activity_word.xml
+++ b/app/src/main/res/layout/activity_word.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purple"
-    tools:context=".CategoryActivity">
+    tools:context=".WordActivity">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_first"
+        android:id="@+id/btn_twoword"
         android:layout_width="247dp"
         android:layout_height="110dp"
         android:layout_marginTop="124dp"
@@ -16,7 +16,7 @@
         android:background="@drawable/green_btn"
         android:fontFamily="@font/gbold"
         android:gravity="center"
-        android:text="ㅁ ㄴ ㄹ"
+        android:text="2음절"
         android:textColor="@color/black"
         android:textSize="44dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,15 +24,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_second"
+        android:id="@+id/btn_threeword"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="280dp"
         android:layout_weight="1"
         android:background="@drawable/white_btn"
         android:fontFamily="@font/gbold"
         android:gravity="center"
-        android:text="ㄱ ㅂ ㅎ"
+        android:text="3음절"
         android:textColor="@color/black"
         android:textSize="44dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,35 +40,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_third"
+        android:id="@+id/btn_fourword"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="440dp"
         android:layout_weight="1"
         android:background="@drawable/green_btn"
         android:fontFamily="@font/gbold"
         android:gravity="center"
-        android:text="ㄷ ㅈ"
+        android:text="4음절"
         android:textColor="@color/black"
         android:textSize="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_fourth"
-        android:layout_width="247dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="508dp"
-        android:layout_weight="1"
-        android:background="@drawable/white_btn"
-        android:fontFamily="@font/gbold"
-        android:gravity="center"
-        android:text="ㅅ ㅆ"
-        android:textColor="@color/black"
-        android:textSize="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
