--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,7 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/purple"
     android:layout_height="match_parent"
     tools:context=".ResultActivity">
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/first"
+        android:layout_width="302dp"
+        android:layout_height="158dp"
+        android:layout_marginTop="184dp"
+        android:layout_weight="1"
+        android:background="@drawable/green_btn"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:text="소리 변별"
+        android:textColor="@color/black"
+        android:textSize="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
