--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,22 +6,41 @@
     android:background="@drawable/purple"
     android:layout_height="match_parent"
     tools:context=".ResultActivity">
+
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/first"
-        android:layout_width="302dp"
-        android:layout_height="158dp"
-        android:layout_marginTop="184dp"
-        android:layout_weight="1"
-        android:background="@drawable/green_btn"
-        android:fontFamily="@font/gbold"
+        android:id="@+id/total"
+        android:layout_width="350dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/malpungsquare"
+        android:fontFamily="@font/gmedium"
         android:gravity="center"
-        android:text="소리 변별"
+
         android:textColor="@color/black"
-        android:textSize="44dp"
+        android:textSize="33dp"
+        app:layout_constraintBottom_toTopOf="@+id/totaltextview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.322" />
+
+    <TextView
+        android:id="@+id/totaltextview"
+        android:layout_width="350dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="296dp"
+        android:background="@drawable/malpungsquare"
+        android:fontFamily="@font/gmedium"
+        android:gravity="center"
+
+        android:textColor="@color/black"
+        android:textSize="33dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
