--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -11,36 +11,38 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/total"
         android:layout_width="350dp"
-        android:layout_height="220dp"
+        android:layout_height="90dp"
         android:layout_marginTop="48dp"
-        android:background="@drawable/malpungsquare"
+        android:background="@drawable/resulttitle"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
 
+        android:text="결과"
         android:textColor="@color/black"
-        android:textSize="33dp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/totaltextview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.322" />
+        app:layout_constraintVertical_bias="0.067" />
 
     <TextView
         android:id="@+id/totaltextview"
         android:layout_width="350dp"
         android:layout_height="220dp"
-        android:layout_marginTop="296dp"
-        android:background="@drawable/malpungsquare"
+        android:background="@drawable/rrrresult"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
-
+        android:text="결과표시"
         android:textColor="@color/black"
-        android:textSize="33dp"
+        android:textSize="33sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></TextView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.414"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
