--- a/app/src/main/res/layout/activity_phoneme.xml
+++ b/app/src/main/res/layout/activity_phoneme.xml
@@ -136,7 +136,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <ImageView
+        android:id="@+id/dalsung"
+        android:layout_width="327dp"
+        android:layout_height="400dp"
+        android:src="@drawable/dalsung"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.642"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
