--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="brown">#3C3C3C</color>
     <color name="orangebrown">#6C452A</color>
+    <color name="tu">#00ff0000</color>
 </resources>
