--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
         android:id="@+id/dalsung_30"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:src="@drawable/dalsung30"
+        android:layout_height="60dp"
+        android:src="@drawable/dalsung25"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="640dp" />
-
-
+        tools:layout_editor_absoluteY="655dp" />
 
     <TextView
         android:id="@+id/tv"
