--- a/app/src/main/res/layout/custom_toast50.xml
+++ b/app/src/main/res/layout/custom_toast50.xml
@@ -12,8 +12,16 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="397dp"
-        android:background="@drawable/toast_background"/>
+        />
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
+        android:textSize="20sp"
+        android:textColor="#000"
+        android:gravity="center"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
