--- a/app/src/main/res/layout/activity_resultword.xml
+++ b/app/src/main/res/layout/activity_resultword.xml
@@ -30,8 +30,8 @@
     <TextView
         android:id="@+id/totaltextview"
         android:layout_width="350dp"
-        android:layout_height="220dp"
-        android:background="@drawable/rrrresult"
+        android:layout_height="380dp"
+        android:background="@drawable/result"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
         android:text="결과표시"
@@ -42,6 +42,6 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.414"></TextView>
+        app:layout_constraintVertical_bias="0.333"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
