--- a/app/src/main/res/layout/activity_resultword.xml
+++ b/app/src/main/res/layout/activity_resultword.xml
@@ -44,4 +44,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.333"></TextView>
 
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/wordreturn"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/rrrrrr"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.839" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
