--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -44,4 +44,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.341"></TextView>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/wordreturn"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/rrrrrr"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.839" />
+
+    <TextView
+        android:id="@+id/wordreturn_msg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:fontFamily="@font/gmedium"
+        android:gravity="center"
+        android:text="다시하기"
+        android:textColor="@color/gray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.946"></TextView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
