--- a/app/src/main/res/layout/activity_resultword.xml
+++ b/app/src/main/res/layout/activity_resultword.xml
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:text="결과표시"
         android:textColor="@color/black"
-        android:textSize="33sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -59,5 +59,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.839" />
+
+    <TextView
+        android:id="@+id/wordreturn_msg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:fontFamily="@font/gmedium"
+        android:gravity="center"
+        android:text="다시하기"
+        android:textColor="@color/gray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.946"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
