--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="brown">#3C3C3C</color>
     <color name="orangebrown">#6C452A</color>
     <color name="tu">#00ff0000</color>
+    <color name="gray">#505050</color>
 </resources>
