--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -16,7 +16,6 @@
         android:background="@drawable/resulttitle"
         android:fontFamily="@font/gmedium"
         android:gravity="center"
-
         android:text="결과"
         android:textColor="@color/black"
         android:textSize="40sp"
@@ -36,7 +35,7 @@
         android:gravity="center"
         android:text="결과표시"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -74,5 +73,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.946"></TextView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/phreturn"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/rrrrrr"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.839" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
