--- a/app/src/main/res/layout/activity_resultword.xml
+++ b/app/src/main/res/layout/activity_resultword.xml
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:text="결과표시"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
