--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -11,17 +11,17 @@
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:background="@drawable/white"
-        android:text="훈련하고자 하는 \n음소를 선택하시오"
         android:fontFamily="@font/gmedium"
-        android:textSize="24dp"
         android:gravity="center"
+        android:text="훈련하고자 하는 \n음소를 선택하세요"
         android:textColor="@color/black"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064" />
+        app:layout_constraintVertical_bias="0.095" />
 
     <ImageView
         android:layout_width="60dp"
@@ -32,13 +32,13 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.029" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_first"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="184dp"
         android:layout_weight="1"
         android:background="@drawable/green_btn"
         android:fontFamily="@font/gbold"
@@ -51,26 +51,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_third"
-        android:layout_width="247dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="424dp"
-        android:layout_weight="1"
-        android:background="@drawable/green_btn"
-        android:fontFamily="@font/gbold"
-        android:gravity="center"
-        android:text="ㄷ ㅈ"
-        android:textColor="@color/black"
-        android:textSize="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_fourth"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="552dp"
+        android:layout_marginTop="568dp"
         android:layout_weight="1"
         android:background="@drawable/white_btn"
         android:fontFamily="@font/gbold"
@@ -86,12 +70,28 @@
         android:id="@+id/btn_second"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="296dp"
+        android:layout_marginTop="312dp"
         android:layout_weight="1"
         android:background="@drawable/white_btn"
         android:fontFamily="@font/gbold"
         android:gravity="center"
         android:text="ㄱ ㅂ ㅎ"
+        android:textColor="@color/black"
+        android:textSize="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_third"
+        android:layout_width="247dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="440dp"
+        android:layout_weight="1"
+        android:background="@drawable/green_btn"
+        android:fontFamily="@font/gbold"
+        android:gravity="center"
+        android:text="ㄷ ㅈ"
         android:textColor="@color/black"
         android:textSize="44dp"
         app:layout_constraintEnd_toEndOf="parent"
