--- a/app/src/main/res/layout/activity_word.xml
+++ b/app/src/main/res/layout/activity_word.xml
@@ -7,11 +7,38 @@
     android:background="@drawable/purple"
     tools:context=".WordActivity">
 
+    <TextView
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:background="@drawable/white"
+        android:fontFamily="@font/gmedium"
+        android:gravity="center"
+        android:text="훈련하고자 하는 \n단어 음절을 선택하세요"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.095" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/check"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.029" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_twoword"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="204dp"
         android:layout_weight="1"
         android:background="@drawable/green_btn"
         android:fontFamily="@font/gbold"
@@ -27,7 +54,7 @@
         android:id="@+id/btn_threeword"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="360dp"
         android:layout_weight="1"
         android:background="@drawable/white_btn"
         android:fontFamily="@font/gbold"
@@ -43,7 +70,7 @@
         android:id="@+id/btn_fourword"
         android:layout_width="247dp"
         android:layout_height="110dp"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="520dp"
         android:layout_weight="1"
         android:background="@drawable/green_btn"
         android:fontFamily="@font/gbold"
